added more info to site

--- a/index.html
+++ b/index.html
@@ -21,11 +21,14 @@
   </head>
 <body>
 
-<h1 align="middle">Vi Le</h1>
+<h1 align="left">Vi Le</h1>
+<p>vianle@berkeley.edu | 408-890-9130</p>
+<h2 align="middle">About Me</h2>
+<p>Hi! I'm currently a junior in computer science at UC Berkeley. I'm particularly interested in computer graphics because of my experience with the 3D modeling and animation experience. I like spending my time watching animated shorts and hoping I could one day make ones that good.</p>
 
 <A HREF="https://github.com/vianle">GitHub (Class projects are private)</A>
-
-<h2 align="middle">Projects</h2>
+<A HREF="hhttps://sketchfab.com/thelettervi">3D Models</A>
+<h2 align="middle">Project Websites</h2>
 <A HREF="projs/cs184/proj1/index.html">Rasterizer Project</A>
 
 </body>
