added proj2 for 184

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 <A HREF="hhttps://sketchfab.com/thelettervi">3D Models</A>
 <h2 align="middle">Project Websites</h2>
 <A HREF="projs/cs184/proj1/index.html">Rasterizer Project</A>
+<A HREF="projs/cs184/proj2/index.html">Mesh Editor Project</A>
 
 </body>
 </html>
