--- a/index.html
+++ b/index.html
@@ -1,36 +1,41 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
   <head>
-    <style>
-    body {
-      padding: 100px;
-      width: 1000px;
-      margin: auto;
-      text-align: left;
-      font-weight: 300;
-      font-family: 'Open Sans', sans-serif;
-      color: #121212;
-    }
-    h1, h2, h3, h4 {
-      font-family: 'Source Sans Pro', sans-serif;
-    }
-    </style>
+    <link rel="stylesheet" href="stylesheet.css">
     <title>Vi Le</title>
-    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans|Source+Sans+Pro" rel="stylesheet">
   </head>
 <body>
 
-<h1 align="left">Vi Le</h1>
-<p>vianle@berkeley.edu | 408-890-9130</p>
-<h2 align="middle">About Me</h2>
-<p>Hi! I'm currently a junior in computer science at UC Berkeley. I'm particularly interested in computer graphics because of my experience with the 3D modeling and animation experience. I like spending my time watching animated shorts and hoping I could one day make ones that good.</p>
+<h1 align="middle"><img src="images/ViLe.png" align="middle" width="150px"/></h1>
 
-<A HREF="https://github.com/vianle">GitHub (Class projects are private)</A>
-<A HREF="hhttps://sketchfab.com/thelettervi">3D Models</A>
-<h2 align="middle">Project Websites</h2>
-<A HREF="projs/cs184/proj1/index.html">Rasterizer Project</A>
-<A HREF="projs/cs184/proj2/index.html">Mesh Editor Project</A>
+  <h2 align="middle"><p>vianle@berkeley.edu | 408-890-9130</p>
+  <A HREF="https://github.com/vianle">GitHub</A>  |  <A HREF="https://sketchfab.com/thelettervi">3D Models</A>  | <A HREF="images/Resume.pdf">Resume</A>  </h2>
+  <br>
 
+    <h3 align="middle">
+    <p>Hi! I'm currently a junior in computer science at UC Berkeley. I'm particularly interested in computer graphics because of my experience with the 3D modeling and animation experience. Right now, I'm taking a computer graphics course, an advanced 3D animation class, and teaching 3D modelling and animation. </p>
+    </h3>
+    
+    </br>
+
+    <h2 align="middle">Project Websites</h2>
+      <div align="middle">
+        <table style="width=100%">
+          <tr>
+            <td>
+              <A HREF="projs/cs184/proj1/index.html"><img src="projs/cs184/proj1/images/sitepic.png" align="middle" width="100%"/>
+              <figcaption align="middle"><A HREF="projs/cs184/proj1/index.html"><h3 align="middle">Rasterizer Project</h3></A></figcaption></A>
+            </td>
+            <td>
+              <A HREF="projs/cs184/proj2/index.html"><img src="projs/cs184/proj2/images/deerBubble3.gif" align="middle" width="100%"/>
+              <figcaption align="middle"><A HREF="projs/cs184/proj2/index.html"><h3 align="middle">Mesh EditorProject</h3></A></figcaption></A>
+            </td>
+<!--             <td>
+              <A HREF="projs/cs184/proj2/index.html"><img src="projs/cs184/proj2/images/deerBubble3.gif" align="middle" width="100%"/>
+              <figcaption align="middle"><A HREF="projs/cs184/proj2/index.html">Mesh Editor Project</A></figcaption></A>
+            </td>
+ -->          </tr>
+        </table>
+      </div>
 </body>
 </html>
