--- a/index.html
+++ b/index.html
@@ -6,19 +6,43 @@
   </head>
 <body>
 
+<!-- <div class="dropdown">
+  <button class="dropbtn"><img src="images/more.png" align="middle" width="150px"/></button>
+  <div class="dropdown-content">
+    <a href="#">Link 1</a>
+    <a href="#">Link 2</a>
+    <a href="#">Link 3</a>
+  </div>
+</div>
+ -->
 <h1 align="middle"><img src="images/ViLe.png" align="middle" width="150px"/></h1>
 
   <h2 align="middle"><p>vianle@berkeley.edu | 408-890-9130</p>
   <A HREF="https://github.com/vianle">GitHub</A>  |  <A HREF="https://sketchfab.com/thelettervi">3D Models</A>  | <A HREF="images/Resume.pdf">Resume</A>  </h2>
+
   <br>
 
+
+<div class="dropdown" align="left">
+  <button class="dropbtn"><img src="images/Menu.png" align="middle" width="70px"/></button>
+  <div class="dropdown-content" align="middle">
+    <a href="#">Link 1</a>
+    <a href="#">Link 2</a>
+    <a href="#">Link 3</a>
+  </div>
+</div>
+
+  </br>
+
     <h3 align="middle">
-    <p>Hi! I'm currently a junior in computer science at UC Berkeley. I'm particularly interested in computer graphics because of my experience with the 3D modeling and animation experience. Right now, I'm taking a computer graphics course, an advanced 3D animation class, and teaching 3D modelling and animation. </p>
+    <p>Hi! I'm currently a junior in computer science at UC Berkeley. 
+      I'm particularly interested in computer graphics because of my experience with 3D modeling and animation. Right now, I'm taking a computer graphics course, an advanced 3D animation course, and teaching 3D modeling and animation. </p>
     </h3>
     
-    </br>
+  <br></br>
 
-    <h2 align="middle">Project Websites</h2>
+    <h2 align="middle"><img src="images/Projects.png" align="middle" width="200px"/></h2>
+    <br></br>
       <div align="middle">
         <table style="width=100%">
           <tr>
@@ -28,7 +52,7 @@
             </td>
             <td>
               <A HREF="projs/cs184/proj2/index.html"><img src="projs/cs184/proj2/images/deerBubble3.gif" align="middle" width="100%"/>
-              <figcaption align="middle"><A HREF="projs/cs184/proj2/index.html"><h3 align="middle">Mesh EditorProject</h3></A></figcaption></A>
+              <figcaption align="middle"><A HREF="projs/cs184/proj2/index.html"><h3 align="middle">Mesh Editor Project</h3></A></figcaption></A>
             </td>
 <!--             <td>
               <A HREF="projs/cs184/proj2/index.html"><img src="projs/cs184/proj2/images/deerBubble3.gif" align="middle" width="100%"/>
