--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
 
   <br>
 
-
 <div class="dropdown" align="left">
   <button class="dropbtn"><img src="images/Menu.png" align="middle" width="70px"/></button>
   <div class="dropdown-content" align="middle">
@@ -47,6 +46,10 @@
         <table style="width=100%">
           <tr>
             <td>
+              <A HREF="projs/2bee/index.html"><img src="projs/2bee/images/2Bee.png" align="middle" width="100%"/>
+              <figcaption align="middle"><A HREF="projs/2bee/index.html"><h3 align="middle">2Bee</h3></A></figcaption></A>
+            </td>            
+            <td>
               <A HREF="projs/cs184/proj1/index.html"><img src="projs/cs184/proj1/images/sitepic.png" align="middle" width="100%"/>
               <figcaption align="middle"><A HREF="projs/cs184/proj1/index.html"><h3 align="middle">Rasterizer Project</h3></A></figcaption></A>
             </td>
@@ -54,11 +57,7 @@
               <A HREF="projs/cs184/proj2/index.html"><img src="projs/cs184/proj2/images/deerBubble3.gif" align="middle" width="100%"/>
               <figcaption align="middle"><A HREF="projs/cs184/proj2/index.html"><h3 align="middle">Mesh Editor Project</h3></A></figcaption></A>
             </td>
-<!--             <td>
-              <A HREF="projs/cs184/proj2/index.html"><img src="projs/cs184/proj2/images/deerBubble3.gif" align="middle" width="100%"/>
-              <figcaption align="middle"><A HREF="projs/cs184/proj2/index.html">Mesh Editor Project</A></figcaption></A>
-            </td>
- -->          </tr>
+          </tr>
         </table>
       </div>
 </body>
