--- a/index.html
+++ b/index.html
@@ -61,17 +61,17 @@
         </table>
       </div>
       <div align="middle">
-        <table style="width=33%">
+        <table style="width=100%">
           <tr>
             <td>
-              <A HREF="projs/cs184/proj3/index.html"><img src="projs/cs184/proj3/images/p5-1.png" align="middle" width="100%"/>
-              <figcaption align="middle"><A HREF="projs/cs184/proj3/index.html"><h3 align="middle">Ray Tracer Project</h3></A></figcaption></A>
+              <A HREF="projs/cs184/proj3/index.html"><img src="projs/cs184/proj3/images/p5-1.png" align="middle" width="320px"/>
+              <figcaption align="middle"><A HREF="projs/cs184/proj3/index.html"><h3 align="middle">Ray Tracer Project Part 1</h3></A></figcaption></A>
             </td>            
-<!--             <td>
-              <A HREF="projs/cs184/proj1/index.html"><img src="projs/cs184/proj1/images/sitepic.png" align="middle" width="100%"/>
-              <figcaption align="middle"><A HREF="projs/cs184/proj1/index.html"><h3 align="middle">Rasterizer Project</h3></A></figcaption></A>
-            </td>
             <td>
+              <A HREF="projs/cs184/proj3-2/index.html"><img src="projs/cs184/proj3-2/images/p4-dragon-b0.1-d1.5.png" align="middle" width="320px"/>
+              <figcaption align="middle"><A HREF="projs/cs184/proj1/index.html"><h3 align="middle">Ray Tracer Project Part 2</h3></A></figcaption></A>
+            </td>
+<!--             <td>
               <A HREF="projs/cs184/proj2/index.html"><img src="projs/cs184/proj2/images/deerBubble3.gif" align="middle" width="100%"/>
               <figcaption align="middle"><A HREF="projs/cs184/proj2/index.html"><h3 align="middle">Mesh Editor Project</h3></A></figcaption></A>
             </td>
