actually updated research link

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <div class="dropdown" align="left">
   <button class="dropbtn"><img src="images/Menu.png" align="middle" width="70px"/></button>
   <div class="dropdown-content" align="middle">
-    <a href="#">Link 1</a>
+    <a href="projs/research/index.html">Previous Research</a>
     <a href="#">Link 2</a>
     <a href="#">Link 3</a>
   </div>
