links inline with about

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
     <h3 align="middle">
     <p>Hi! I'm currently a junior in computer science at UC Berkeley. 
-      I'm particularly interested in computer graphics because of my experience with 3D modeling and animation. Right now, I'm taking a computer graphics course, an advanced 3D animation course, and teaching 3D modeling and animation. </p>
+      I'm particularly interested in computer graphics because of my experience with 3D modeling and animation. Right now, I'm taking a <a href="https://cs184.org/">computer graphics course</a>, an <a href="http://cnm190.com">advanced 3D animation course</a>, and teaching <a href="http://ucbugg.com/static/index.html#home">3D modeling and animation</a>. </p>
     </h3>
     
   <br></br>
