adding final proj template

--- a/index.html
+++ b/index.html
@@ -71,11 +71,11 @@
               <A HREF="projs/cs184/proj3-2/index.html"><img src="projs/cs184/proj3-2/images/p4-dragon-b0.1-d1.5.png" align="middle" width="320px"/>
               <figcaption align="middle"><A HREF="projs/cs184/proj1/index.html"><h3 align="middle">Ray Tracer Project Part 2</h3></A></figcaption></A>
             </td>
-<!--             <td>
-              <A HREF="projs/cs184/proj2/index.html"><img src="projs/cs184/proj2/images/deerBubble3.gif" align="middle" width="100%"/>
-              <figcaption align="middle"><A HREF="projs/cs184/proj2/index.html"><h3 align="middle">Mesh Editor Project</h3></A></figcaption></A>
+            <td>
+              <A HREF="projs/cs184/final/index.html"><!-- <img src="projs/cs184/proj2/images/deerBubble3.gif" align="middle" width="100%"/> -->
+              <figcaption align="middle"><A HREF="projs/cs184/final/index.html"><h3 align="middle">Remeshing Project</h3></A></figcaption></A>
             </td>
- -->          </tr>
+          </tr>
         </table>
       </div>
 
