--- a/index.html
+++ b/index.html
@@ -73,7 +73,8 @@
             </td>
             <td>
               <A HREF="projs/cs184/final/index.html"><!-- <img src="projs/cs184/proj2/images/deerBubble3.gif" align="middle" width="100%"/> -->
-              <figcaption align="middle"><A HREF="projs/cs184/final/index.html"><h3 align="middle">Remeshing Project</h3></A></figcaption></A>
+<!--               <figcaption align="middle"><A HREF="projs/cs184/final/index.html"><h3 align="middle">Remeshing Project</h3></A></figcaption></A>
+ -->              <figcaption align="middle"><A HREF="cs184-final-proj-website/index.html"><h3 align="middle">Remeshing Project</h3></A></figcaption></A>
             </td>
           </tr>
         </table>
