--- a/projs/cs184/final/index.html
+++ b/projs/cs184/final/index.html
@@ -24,18 +24,26 @@
 <h1 align="middle">CS 184: Computer Graphics and Imaging, Spring 2017</h1>
 <h1 align="middle">Final Project: Remeshing
 </h1>
-<h2 align="middle">Isabel Zhang, Vi Le (cs184-aaf)</h2>
+<h2 align="middle">Isabel Zhang (cs184-abe), Vi Le (cs184-aaf)</h2>
 
 <div>
 
 
 <h2 align="middle">Overview</h2>
-<p></p>
+<p>Remesh, boolean addition, boolean subtraaction</p>
 
 
-<h2 align="middle">Part 1: </h2>
-<p></p>
+<h2 align="middle">Schedule</h2>
+<h3 align="middle">Week 1</h2>
+  <p>Set-up, Remeshing</p>
+<h3 align="middle">Week 2</h2>
+  <p>Remeshing</p>
+<h3 align="middle">Week 3</h2>
+  <p>Addition</p>
+<h3 align="middle">Week 4</h2>
+  <p>Subtraction</p>
 
+<!-- 
 <div align="middle">
   <table style="width=100%">
     <tr>
@@ -43,30 +51,30 @@
         <img src="images/p1-1.png" align="middle" width="480px"/>
         <figcaption align="middle"></figcaption>
       </td>
-<!--     <tr>
-    </tr> -->
       <td>
         <img src="images/p1-2.png" align="middle" width="480px"/>
         <figcaption align="middle"></figcaption>
       </td>
     </tr>
   </table>
-</div>
+</div> -->
 
 <h2 align="middle">Resources</h2>
 <p>http://groups.csail.mit.edu/graphics/classes/6.837/F98/talecture/</p>
 <p>https://www.cs.mtu.edu/~shene/COURSES/cs3621/NOTES/model/csg.html</p>
 <p>http://www.cs.jhu.edu/~misha/ReadingSeminar/Papers/Huang07b.pdf</p>
+<p>http://stackoverflow.com/questions/2002976/constructive-solid-geometry-mesh</p>
 
-<div align="middle">
+<p>Isotropic remeshing </p>
+<p>http://graphics.stanford.edu/courses/cs468-12-spring/LectureSlides/13_Remeshing1.pdf</p>
+
+<!-- <div align="middle">
   <table style="width=100%">
     <tr>
       <td>
         <img src="images/p2-2.png" align="middle" width="480px"/>
         <figcaption align="middle"> </figcaption>
       </td>
-<!--     <tr>
-    </tr> -->
       <td>
         <img src="images/p2-3.png" align="middle" width="480px"/>
         <figcaption align="middle"> </figcaption>
@@ -77,8 +85,6 @@
         <img src="images/p2-4.png" align="middle" width="480px"/>
         <figcaption align="middle"></figcaption>
       </td>
-<!--     <tr>
-    </tr> -->
       <td>
         <img src="images/p2-5.png" align="middle" width="480px"/>
         <figcaption align="middle"></figcaption>
@@ -87,7 +93,7 @@
 
   </table>
 </div>
-
+ -->
 
 </div>
 </body>
