--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <button class="dropbtn"><img src="images/Menu.png" align="middle" width="70px"/></button>
   <div class="dropdown-content" align="middle">
     <a href="projs/research/index.html">Previous Research</a>
-    <a href="#">Link 2</a>
+    <a href="shorts/index.html">Reel</a>
     <a href="#">Link 3</a>
   </div>
 </div>
