--- a/shorts/index.html
+++ b/shorts/index.html
@@ -15,26 +15,19 @@
     font-family: 'Source Sans Pro', sans-serif;
   }
 </style>
-<title>CS 184 Final Project</title>
+<title>Shorts Work</title>
 <meta http-equiv="content-type" content="text/html; charset=utf-8" />
 <link href="https://fonts.googleapis.com/css?family=Open+Sans|Source+Sans+Pro" rel="stylesheet">
 </head>
+
+
 <body>
 
-<h1 align="middle">CS 184: Computer Graphics and Imaging, Spring 2017</h1>
-<h1 align="middle">Final Project: Remeshing and Constructive Solid Geometry
-</h1>
-<h2 align="middle">Isabel Zhang (cs184-abe), Vi Le (cs184-aaf)</h2>
+<h1 align="middle">Shorts Work</h1>
+<br>
+<h3>Here is a peice of animation and lighting I've done</h3>
+</br>
+<iframe src="https://drive.google.com/file/d/0B1YMXYFIyMTmeTQxLXZXWENaSjA/preview" width="640" height="480"></iframe>
 
-<div>
-<a href="proposal.html"><h1 align="left">Proposal</h1></a>
-<a href="milestone.html"><h1 align="left">Milestone</h1></a>
-<a href="final.html"><h1 align="left">Final Project Report</h1></a>
-
-</div>
 </body>
 </html>
-
-
-
-
