--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
   </br>
 
     <h3 align="middle">
-    <p>Hi! I'm currently a junior in computer science at UC Berkeley. 
-      I'm particularly interested in computer graphics because of my experience with 3D modeling and animation. Right now, I'm taking a <a href="https://cs184.org/">computer graphics course</a>, an <a href="http://cnm190.com">advanced 3D animation course</a>, and teaching <a href="http://ucbugg.com/static/index.html#home">3D modeling and animation</a>. </p>
+    <p>Hi! I'm currently a senior in computer science at UC Berkeley. 
+      I'm particularly interested in computer graphics because of my experience with 3D modeling and animation. Right now, I'm teaching <a href="http://ucbugg.com/static/index.html#home">3D modeling and animation and helping set up a SIGGRAPH chapter on my school</a>. </p>
     </h3>
     
   <br></br>
