updated final proj 184

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
     <h3 align="middle">
     <p>Hi! I'm currently a senior in computer science at UC Berkeley. 
-      I'm particularly interested in computer graphics because of my experience with 3D modeling and animation. Right now, I'm teaching <a href="http://ucbugg.com/static/index.html#home">3D modeling and animation and helping set up a SIGGRAPH chapter on my school</a>. </p>
+      I'm particularly interested in computer graphics because of my experience with 3D modeling and animation. Right now, I'm teaching <a href="http://ucbugg.com/static/index.html#home">3D modeling and animation</a> and helping set up a SIGGRAPH chapter on my school. </p>
     </h3>
     
   <br></br>
@@ -72,13 +72,30 @@
               <figcaption align="middle"><A HREF="projs/cs184/proj1/index.html"><h3 align="middle">Ray Tracer Project Part 2</h3></A></figcaption></A>
             </td>
             <td>
-              <A HREF="projs/cs184/final/index.html"><!-- <img src="projs/cs184/proj2/images/deerBubble3.gif" align="middle" width="100%"/> -->
-<!--               <figcaption align="middle"><A HREF="projs/cs184/final/index.html"><h3 align="middle">Remeshing Project</h3></A></figcaption></A>
- -->              <figcaption align="middle"><A HREF="http://htmlpreview.github.com/?https://github.com/vianle/cs184-final-proj-website/blob/master/index.html"><h3 align="middle">Remeshing Project</h3></A></figcaption></A>
+              <A HREF="projs/cs184/final/index.html"><img src="projs/cs184/final/images/finalReport/teapot-simp2.png" align="middle" width="100%"/>
+              <figcaption align="middle"><A HREF="http://htmlpreview.github.com/?https://github.com/vianle/cs184-final-proj-website/blob/master/index.html"><h3 align="middle">Remeshing Project</h3></A></figcaption></A>
             </td>
           </tr>
         </table>
       </div>
+<!--       <div align="middle">
+        <table style="width=100%">
+          <tr>
+            <td>
+              <A HREF="projs/cs184/proj3/index.html"><img src="projs/cs184/proj3/images/p5-1.png" align="middle" width="320px"/>
+              <figcaption align="middle"><A HREF="projs/cs184/proj3/index.html"><h3 align="middle">Ray Tracer Project Part 1</h3></A></figcaption></A>
+            </td>            
+            <td>
+              <A HREF="projs/cs184/proj3-2/index.html"><img src="projs/cs184/proj3-2/images/p4-dragon-b0.1-d1.5.png" align="middle" width="320px"/>
+              <figcaption align="middle"><A HREF="projs/cs184/proj1/index.html"><h3 align="middle">Ray Tracer Project Part 2</h3></A></figcaption></A>
+            </td>
+            <td>
+              <A HREF="projs/cs184/final/index.html"><img src="projs/cs184/final/images/finalReport/teapot-simp2.png" align="middle" width="100%"/>
+              <figcaption align="middle"><A HREF="http://htmlpreview.github.com/?https://github.com/vianle/cs184-final-proj-website/blob/master/index.html"><h3 align="middle">Remeshing Project</h3></A></figcaption></A>
+            </td>
+          </tr>
+        </table>
+      </div> -->
 
 </body>
 </html>
