--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <h1 align="middle"><img src="images/ViLe.png" align="middle" width="150px"/></h1>
 
   <h2 align="middle"><p>vianle@berkeley.edu | 408-890-9130</p>
-  <A HREF="https://github.com/vianle">GitHub</A>  |  <A HREF="https://sketchfab.com/thelettervi">3D Models</A>  | <A HREF="images/Resume.pdf">Resume</A>  </h2>
+  <A HREF="https://github.com/vianle">GitHub</A>  |  <A HREF="https://sketchfab.com/thelettervi">3D Models</A>  | <A HREF="images/Vi Le - resume - latest.pdf">Resume</A>  </h2>
 
   <br>
 
