update linkedin and twitter

--- a/index.html
+++ b/index.html
@@ -20,7 +20,10 @@
   <h2 align="middle"><p>vianle@berkeley.edu | 408-890-9130</p>
   <A HREF="https://github.com/vianle">GitHub</A>  |  <A HREF="https://sketchfab.com/thelettervi">3D Models</A>  | <A HREF="images/Vi Le - resume - latest.pdf">Resume</A>  </h2>
 
-  <br>
+  
+<h2 align="middle">
+<A HREF="https://www.linkedin.com/in/vianle/"><img src="images/linkedin.png" align="middle" width="50px"/></A> 
+<A HREF="https://twitter.com/hi_im_vile"><img src="images/twitter.png" align="middle" width="50px"/></A> </h2>
 
 <div class="dropdown" align="left">
   <button class="dropbtn"><img src="images/Menu.png" align="middle" width="70px"/></button>
