updated research credits

--- a/projs/research/index.html
+++ b/projs/research/index.html
@@ -25,6 +25,7 @@
 
 <h1 align="middle">Previous Research</h1>
 <br>
+<h3>The results of this research has been used in <a href="https://stacks.stanford.edu/file/druid:td803kh9320/All-Chapters-v21-Esubmission-augmented.pdf">"Adhesion and Reliability of Solar Module Materials" </a> </h3>
 <h3>Here are the posters from my research in materials science regarding the adhesives used in solar panels:</h3>
 </br>
 <div align="middle">
@@ -35,6 +36,5 @@
 <img src="images/2014.png" align="middle" width="100%"/>
 </td>
 </div>
-
 </body>
 </html>
